:construction: Add database storage and remove ZScheduler